--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 		</style>
 	</head>
 	<body>
-	<div class="addImg">添加图片</div>
+	<div class="addImg">添加图片123</div>
 		
 	<!--	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script> 
 		<script type="text/javascript" src="jquery/jquery.min.js"></script>  -->
